--- a/全局/使用说明.md
+++ b/全局/使用说明.md
@@ -8,13 +8,13 @@
 -------------------------
 - 云端服务器: https://cloudapi.qingpai365.com
 - 业务服务器: https://crmtest.qingpai365.com
-- 服务地址: https://业务服务器地址/commservice
+- 服务地址: https://commservice.qingpai365.com
 
 ## URL分配
 -------------------------
-- 接口: https://crmtest.qingpai365.com/shopapi
-- 门店WEB: https://crmtest.qingpai365.com/shopweb
-- 门店微信: https://crmtest.qingpai365.com/shopwechat
+- 接口: https://crmtest.qingpai365.com/clinicapi
+- 门店WEB: https://crmtest.qingpai365.com/clinicweb
+- 门店微信: https://crmtest.qingpai365.com/clinicwechat
 - 门店管理后台: https://crmtest.qingpai365.com/adminweb
 
 ## 测试账号
@@ -43,31 +43,31 @@
     <tr>
         <td>新增</td>
         <td>POST</td>
-        <td>/shop</td>
+        <td>/clinic</td>
         <td>-</td>
     </tr>
     <tr>
         <td>更新</td>
         <td>PATCH/PUT</td>
-        <td>/shop/:shop_id</td>
+        <td>/clinic/:clinic_id</td>
         <td>-</td>
     </tr>
     <tr>
         <td>删除</td>
         <td>DELETE</td>
-        <td>/shop/:shop_ids</td>
+        <td>/clinic/:shop_ids</td>
         <td>批量删除,请将id用,拼起来.如果1,2,3</td>
     </tr>
     <tr>
         <td>获取列表</td>
         <td>GET</td>
-        <td>/shop</td>
-        <td>可以按field=value形式来添加约束条件,如/shop?category=10</td>
+        <td>/clinic</td>
+        <td>可以按field=value形式来添加约束条件,如/clinic?category=10</td>
     </tr>
     <tr>
         <td>获取单个</td>
         <td>GET</td>
-        <td>/shop/:shop_id</td>
+        <td>/clinic/:clinic_id</td>
         <td>-</td>
     </tr>
 </table>
@@ -143,7 +143,7 @@
 ## 上传文件
 
 `
-POST /shop/storage/v1/upload
+POST /clinic/storage/v1/upload
 `
 > 请求参数:
 
@@ -177,7 +177,7 @@ GET /storage/:key
 ## 获取上传文件
 > 通过接口获取上传文件, 需要认证
 `
-GET /shop/storage/v1/get
+GET /clinic/storage/v1/get
 `
 
 > 请求参数:
