--- a/全局/登录认证.md
+++ b/全局/登录认证.md
@@ -3,7 +3,7 @@
 ## 门店登录
 
 `
-POST /public/shop/v1/user/login
+POST /public/clinc/v1/user/login
 `
 
 > 请求参数: 
@@ -68,11 +68,17 @@ POST /public/shop/v1/user/login
         <td>刷新TOKEN,当token失效时，可使用refreshToken刷新token</td>
         <td>-</td>
     </tr>
+    <tr>
+        <td>clinicList</td>
+        <td>object</td>
+        <td>诊所列表</td>
+        <td>-</td>
+    </tr>
 </table>
 
 ## 刷新token
 `
-POST /public/shop/v1/user/refresh
+POST /public/clinic/v1/user/refresh
 `
 
 > 请求参数:
