--- a/微信/微信首页.md
+++ b/微信/微信首页.md
@@ -81,7 +81,7 @@ POST /api/wechat/v1/signin
         <th style="width:200px;">说明</th>
     </tr>
     <tr>
-        <td>shopId</td>
+        <td>clinicId</td>
         <td>string</td>
         <td>是</td>
         <td>门店ID</td>
@@ -101,7 +101,7 @@ POST /api/wechat/v1/signin
 GET /api/wechat/v1/optometry
 ```
 
->参数: appId, shopId, customerId
+>参数: appId, clinicId, customerId
 
 ## 检查单详情
 
@@ -109,7 +109,7 @@ GET /api/wechat/v1/optometry
 GET /api/wechat/v1/optometry/:id
 ```
 
->参数: appId, shopId, customerId, id(检查单ID)
+>参数: appId, clinicId, customerId, id(检查单ID)
 
 
 ## 处置单列表
@@ -118,7 +118,7 @@ GET /api/wechat/v1/optometry/:id
 GET /api/wechat/v1/treatment
 ```
 
->参数: appId, shopId, customerId
+>参数: appId, clinicId, customerId
 
 ## 处置单详情
 
@@ -126,7 +126,7 @@ GET /api/wechat/v1/treatment
 GET /api/wechat/v1/treatment/:id
 ```
 
->参数: appId, shopId, customerId, id(处置单ID)
+>参数: appId, clinicId, customerId, id(处置单ID)
 
 
 ## 帐单列表
@@ -135,7 +135,7 @@ GET /api/wechat/v1/treatment/:id
 GET /api/wechat/v1/bill
 ```
 
->参数: appId, shopId, customerId
+>参数: appId, clinicId, customerId
 
 ## 账单详情
 
@@ -143,7 +143,7 @@ GET /api/wechat/v1/bill
 GET /api/wechat/v1/bill/:id
 ```
 
->参数: appId, shopId, customerId, id(帐单ID)
+>参数: appId, clinicId, customerId, id(帐单ID)
 
 ## 加工单列表
 
@@ -151,7 +151,7 @@ GET /api/wechat/v1/bill/:id
 GET /api/wechat/v1/processing
 ```
 
->参数: appId, shopId, customerId
+>参数: appId, clinicId, customerId
 
 ## 加工单详情
 
@@ -159,4 +159,4 @@ GET /api/wechat/v1/processing
 GET /api/wechat/v1/processing/:id
 ```
 
->参数: appId, shopId, customerId, id(加工单ID)
+>参数: appId, clinicId, customerId, id(加工单ID)
