--- a/微信/扫码签到.md
+++ b/微信/扫码签到.md
@@ -2,11 +2,11 @@
 
 ## 扫码候诊流程
 
->步骤1. 候诊起始页面: /api/public/v1/wechat/redirect?appId=:appId&shopId=:shopId, 作用: 导航到微信授权页面
+>步骤1. 候诊起始页面: /api/public/v1/wechat/redirect?appId=:appId&clinicId=:clinicId, 作用: 导航到微信授权页面
 
->步骤2. 微信授权后, 返回页面: /api/public/v1/wechat/auth?appId=:appId&shopId=:shopId&openid=:openid, 作用: 获取openid, 跳转到前端页面
+>步骤2. 微信授权后, 返回页面: /api/public/v1/wechat/auth?appId=:appId&clinicId=:clinicId&openid=:openid, 作用: 获取openid, 跳转到前端页面
 
->步骤3. 跳转到前端页面: /wechat/redirect?appId=:appId&shopId=:shopId&token=:token, 作用: 发放token, 跳转到前端页面
+>步骤3. 跳转到前端页面: /wechat/redirect?appId=:appId&clinicId=:clinicId&token=:token, 作用: 发放token, 跳转到前端页面
 
 >步骤4. 前端页面处理token, 进入候诊页面
 
@@ -38,7 +38,7 @@ POST /api/wechat/v1/customer
         <th style="width:200px;">说明</th>
     </tr>
     <tr>
-        <td>shopId</td>
+        <td>clinicId</td>
         <td>string</td>
         <td>是</td>
         <td>门店ID</td>
