--- a/门店/候诊/候诊.md
+++ b/门店/候诊/候诊.md
@@ -112,7 +112,7 @@
 ## 候诊二维码
 
 ```
-GET /shop/wechat3p/v1/qrcode
+GET /clinic/wechat/v1/qrcode
 ```
 
 >请求参数
@@ -124,10 +124,10 @@ GET /shop/wechat3p/v1/qrcode
         <th style="width:200px;">说明</th>
     </tr>
     <tr>
-        <td>shopId</td>
+        <td>clinicId</td>
         <td>string</td>
         <td>是</td>
-        <td>门店ID</td>
+        <td>诊所ID</td>
     </tr>
 </table>
 
@@ -163,7 +163,7 @@ GET /shop/wechat3p/v1/qrcode
 ## 候诊患者
 
 ```
-POST /shop/signin/v1/signin
+POST /clinic/crm/v1/signin
 ```
 
 >请求参数
@@ -175,7 +175,7 @@ POST /shop/signin/v1/signin
         <th style="width:200px;">说明</th>
     </tr>
     <tr>
-        <td>shopId</td>
+        <td>clinicId</td>
         <td>string</td>
         <td>是</td>
         <td>门店ID</td>
@@ -191,7 +191,7 @@ POST /shop/signin/v1/signin
 ## 撤销候诊
 
 ```
-POST /shop/signin/v1/signin/undo
+POST /clinic/crm/v1/signin/undo
 ```
 
 >请求参数
@@ -203,7 +203,7 @@ POST /shop/signin/v1/signin/undo
         <th style="width:200px;">说明</th>
     </tr>
     <tr>
-        <td>shopId</td>
+        <td>clinicId</td>
         <td>string</td>
         <td>是</td>
         <td>门店ID</td>
@@ -219,7 +219,7 @@ POST /shop/signin/v1/signin/undo
 ## 候诊列表
 
 ```
-GET /shop/signin/v1/signin
+GET /clinic/crm/v1/signin
 ```
 
 >请求参数
@@ -232,7 +232,7 @@ GET /shop/signin/v1/signin
         <th style="width:200px;">说明</th>
     </tr>
     <tr>
-        <td>shopId</td>
+        <td>clinicId</td>
         <td>string</td>
         <td>-</td>
         <td>门店ID</td>
@@ -266,7 +266,7 @@ GET /shop/signin/v1/signin
 ## 候诊详情
 
 ```
-GET /shop/signin/v1/signin/status
+GET /clinic/crm/v1/signin/status
 ```
 
 >请求参数
@@ -279,7 +279,7 @@ GET /shop/signin/v1/signin/status
         <th style="width:200px;">说明</th>
     </tr>
     <tr>
-        <td>shopId</td>
+        <td>clinicId</td>
         <td>string</td>
         <td>是</td>
         <td>门店ID</td>
@@ -327,10 +327,10 @@ GET /shop/signin/v1/signin/status
     </tr>
 </table>
 
-## 离店
+## 离开
 
 ```
-POST /shop/signin/v1/signin/leave
+POST /clinic/crm/v1/signin/leave
 ```
 
 >请求参数
@@ -342,7 +342,7 @@ POST /shop/signin/v1/signin/leave
         <th style="width:200px;">说明</th>
     </tr>
     <tr>
-        <td>shopId</td>
+        <td>clinicId</td>
         <td>string</td>
         <td>是</td>
         <td>门店ID</td>
