--- a/门店/加工/加工单.md
+++ b/门店/加工/加工单.md
@@ -145,13 +145,13 @@
 ## 加工单列表
 
 ```
-GET /shop/processing/v1/processing
+GET /clinic/processing/v1/processing
 ```
 
 ## 创建加工单
 
 ```
-POST /shop/processing/v1/processing
+POST /clinic/processing/v1/processing
 ```
 > 请求参数
 
@@ -209,7 +209,7 @@ POST /shop/processing/v1/processing
 ## 查看加工单列表
 
 ```
-GET /shop/processing/v1/processing
+GET /clinic/processing/v1/processing
 ```
 
 > 请求参数
@@ -222,7 +222,7 @@ GET /shop/processing/v1/processing
         <th style="width:200px;">说明</th>
     </tr>
     <tr>
-        <td>shopId</td>
+        <td>clinicId</td>
         <td>String</td>
         <td>-</td>
         <td>门店ID</td>
@@ -232,13 +232,13 @@ GET /shop/processing/v1/processing
 ## 查看加工单
 
 ```
-GET /shop/processing/v1/processing/:id
+GET /clinic/processing/v1/processing/:id
 ```
 
 ## 加工完成
 
 ```
-POST /shop/processing/v1/processing/ready
+POST /clinic/processing/v1/processing/ready
 ```
 
 > 请求参数
@@ -267,7 +267,7 @@ POST /shop/processing/v1/processing/ready
 ## 取货
 
 ```
-POST /shop/processing/v1/processing/fetch
+POST /clinic/processing/v1/processing/fetch
 ```
 
 > 请求参数
@@ -296,7 +296,7 @@ POST /shop/processing/v1/processing/fetch
 ## 取消加工单
 
 ```
-POST /shop/processing/v1/processing/cancel
+POST /clinic/processing/v1/processing/cancel
 ```
 
 > 请求参数
