--- a/门店/商品/商品信息.md
+++ b/门店/商品/商品信息.md
@@ -146,7 +146,7 @@
 ## 商品目录列表
 
 ```
-GET /shop/product/v1/product
+GET /clinic/product/v1/product
 ```
 
 >请求参数
@@ -158,7 +158,7 @@ GET /shop/product/v1/product
         <th style="width:200px;">说明</th>
     </tr>
     <tr>
-        <td>shopId</td>
+        <td>clinicId</td>
         <td>string</td>
         <td>是</td>
         <td>门店ID</td>
@@ -181,7 +181,7 @@ GET /shop/product/v1/product
 ## 商品目录导出
 
 ```
-GET /shop/product/v1/product/export
+GET /clinic/product/v1/product/export
 ```
 
 >请求参数
@@ -193,7 +193,7 @@ GET /shop/product/v1/product/export
         <th style="width:200px;">说明</th>
     </tr>
     <tr>
-        <td>shopId</td>
+        <td>clinicId</td>
         <td>string</td>
         <td>是</td>
         <td>门店ID</td>
@@ -215,7 +215,7 @@ GET /shop/product/v1/product/export
 ## 添加(excel方式)
 
 ```
-POST /shop/product/v1/product/import
+POST /clinic/product/v1/product/import
 ```
 
 > 此方式通过excel导入批量添加, 相同商品会覆盖现有数据
@@ -229,7 +229,7 @@ POST /shop/product/v1/product/import
         <th style="width:200px;">说明</th>
     </tr>
     <tr>
-        <td>shopId</td>
+        <td>clinicId</td>
         <td>string</td>
         <td>是</td>
         <td>门店ID</td>
@@ -257,7 +257,7 @@ POST /shop/product/v1/product/import
 ## 添加(表单方式)
 
 ```
-POST /shop/product/v1/product
+POST /clinic/product/v1/product
 ```
 
 > 此方式通过excel导入批量添加, 相同商品会覆盖现有数据
@@ -271,7 +271,7 @@ POST /shop/product/v1/product
         <th style="width:200px;">说明</th>
     </tr>
     <tr>
-        <td>shopId</td>
+        <td>clinicId</td>
         <td>string</td>
         <td>是</td>
         <td>门店ID</td>
@@ -308,7 +308,7 @@ POST /shop/product/v1/product
 ## 更新
 
 ```
-PATCH /shop/product/v1/product/:id
+PATCH /clinic/product/v1/product/:id
 ```
 
 >请求参数
@@ -324,5 +324,5 @@ PATCH /shop/product/v1/product/:id
 ## 删除
 
 ```
-DELETE /shop/product/v1/product/:id
+DELETE /clinic/product/v1/product/:id
 ```
