--- a/门店/商品/库存单据.md
+++ b/门店/商品/库存单据.md
@@ -104,7 +104,7 @@
 ## 库存单据列表
 
 ```
-GET /shop/product/v1/receipt
+GET /clinic/product/v1/receipt
 ```
 
 >请求参数
@@ -116,7 +116,7 @@ GET /shop/product/v1/receipt
         <th style="width:200px;">说明</th>
     </tr>
     <tr>
-        <td>shopId</td>
+        <td>clinicId</td>
         <td>string</td>
         <td>是</td>
         <td>门店ID</td>
@@ -144,7 +144,7 @@ GET /shop/product/v1/receipt
 ## 添加单据
 
 ```
-POST /shop/product/v1/receipt
+POST /clinic/product/v1/receipt
 ```
 
 >请求参数
@@ -158,7 +158,7 @@ POST /shop/product/v1/receipt
         <th style="width:200px;">说明</th>
     </tr>
     <tr>
-        <td>shopId</td>
+        <td>clinicId</td>
         <td>string</td>
         <td>是</td>
         <td>入库门店ID</td>
@@ -210,7 +210,7 @@ POST /shop/product/v1/receipt
         <th style="width:200px;">说明</th>
     </tr>
     <tr>
-        <td>shopId</td>
+        <td>clinicId</td>
         <td>string</td>
         <td>是</td>
         <td>入库门店ID</td>
@@ -274,7 +274,7 @@ POST /shop/product/v1/receipt
         <th style="width:200px;">说明</th>
     </tr>
     <tr>
-        <td>shopId</td>
+        <td>clinicId</td>
         <td>string</td>
         <td>是</td>
         <td>出库门店ID</td>
@@ -338,7 +338,7 @@ POST /shop/product/v1/receipt
         <th style="width:200px;">说明</th>
     </tr>
     <tr>
-        <td>shopId</td>
+        <td>clinicId</td>
         <td>string</td>
         <td>是</td>
         <td>出库门店ID</td>
@@ -390,7 +390,7 @@ POST /shop/product/v1/receipt
         <th style="width:200px;">说明</th>
     </tr>
     <tr>
-        <td>shopId</td>
+        <td>clinicId</td>
         <td>string</td>
         <td>是</td>
         <td>出库门店ID</td>
@@ -460,7 +460,7 @@ POST /shop/product/v1/receipt
         <th style="width:200px;">说明</th>
     </tr>
     <tr>
-        <td>shopId</td>
+        <td>clinicId</td>
         <td>string</td>
         <td>是</td>
         <td>盘点门店ID</td>
@@ -507,7 +507,7 @@ POST /shop/product/v1/receipt
 ## 更新单据
 
 ```
-PATCH /shop/product/v1/receipt/:id
+PATCH /clinic/product/v1/receipt/:id
 ```
 
 >请求参数
@@ -529,7 +529,7 @@ PATCH /shop/product/v1/receipt/:id
 ## 取消单据
 
 ```
-POST /shop/product/v1/receipt/cancel
+POST /clinic/product/v1/receipt/cancel
 ```
 
 >请求参数
@@ -551,7 +551,7 @@ POST /shop/product/v1/receipt/cancel
 ## 删除单据
 
 ```
-DELETE /shop/product/v1/receipt/:id
+DELETE /clinic/product/v1/receipt/:id
 ```
 
 >请求参数
@@ -573,7 +573,7 @@ DELETE /shop/product/v1/receipt/:id
 ## 提交审核单据
 
 ```
-POST /shop/product/v1/receipt/submit-audit
+POST /clinic/product/v1/receipt/submit-audit
 ```
 
 > 仅表单方式需要提交审核, excel方式自动提交审核
@@ -597,7 +597,7 @@ POST /shop/product/v1/receipt/submit-audit
 ## 审核单据
 
 ```
-POST /shop/product/v1/receipt/audit
+POST /clinic/product/v1/receipt/audit
 ```
 
 >请求参数
