--- a/门店/处置/处置单.md
+++ b/门店/处置/处置单.md
@@ -10,7 +10,7 @@
         <th>备注</th>
     </tr>
     <tr>
-        <td>shopId</td>
+        <td>clinicId</td>
         <td>string</td>
         <td>门店ID</td>
         <td>-</td>
@@ -39,7 +39,7 @@
 ## 新建
 
 ```
-POST /shop/treatment/v1/treatment
+POST /clinic/treatment/v1/treatment
 ```
 
 >请求参数
@@ -51,7 +51,7 @@ POST /shop/treatment/v1/treatment
         <th style="width:200px;">说明</th>
     </tr>
     <tr>
-        <td>shopId</td>
+        <td>clinicId</td>
         <td>string</td>
         <td>是</td>
         <td>门店ID</td>
@@ -67,19 +67,19 @@ POST /shop/treatment/v1/treatment
 ## 列表
 
 ```
-GET /shop/treatment/v1/treatment
+GET /clinic/treatment/v1/treatment
 ```
 
 ## 查看
 
 ```
-GET /shop/treatment/v1/treatment/:id
+GET /clinic/treatment/v1/treatment/:id
 ```
 
 ## 取消
 
 ```
-POST /shop/treatment/v1/treatment/cancel
+POST /clinic/treatment/v1/treatment/cancel
 ```
 
 >请求参数
@@ -107,5 +107,5 @@ POST /shop/treatment/v1/treatment/cancel
 ## 删除
 
 ```
-DELETE /shop/treatment/v1/treatment/:id
+DELETE /clinic/treatment/v1/treatment/:id
 ```
