--- a/门店/处置/处置项目.md
+++ b/门店/处置/处置项目.md
@@ -10,7 +10,7 @@
         <th>备注</th>
     </tr>
     <tr>
-        <td>shopId</td>
+        <td>clinicId</td>
         <td>string</td>
         <td>门店ID</td>
         <td>-</td>
@@ -62,7 +62,7 @@
 ## 添加(按商品)
 
 ```
-POST /shop/treatment/v1/item/create-by-product
+POST /clinic/treatment/v1/item/create-by-product
 ```
 
 >请求参数
@@ -96,25 +96,25 @@ POST /shop/treatment/v1/item/create-by-product
 ## 列表
 
 ```
-GET /shop/treatment/v1/item?treatmentId=:treatmentId
+GET /clinic/treatment/v1/item?treatmentId=:treatmentId
 ```
 
 ## 查看
 
 ```
-GET /shop/treatment/v1/item/:id
+GET /clinic/treatment/v1/item/:id
 ```
 
 ## 删除
 
 ```
-DELETE /shop/treatment/v1/item/:id
+DELETE /clinic/treatment/v1/item/:id
 ```
 
 ## 删除(按商品)
 
 ```
-DELETE /shop/treatment/v1/item/delete-by-product
+DELETE /clinic/treatment/v1/item/delete-by-product
 ```
 
 >请求参数
