--- a/门店/患者/患者.md
+++ b/门店/患者/患者.md
@@ -23,7 +23,7 @@
         <th>备注</th>
     </tr>
     <tr>
-        <td>shopId</td>
+        <td>clinicId</td>
         <td>string</td>
         <td>门店ID</td>
         <td>-</td>
@@ -132,7 +132,7 @@
     </tr>    
     <tr>
         <td>tag</td>
-        <td>List<String></td>
+        <td>string</td>
         <td>标签列表</td>
         <td>-</td>
     </tr>
@@ -148,24 +148,12 @@
         <td>转介绍人</td>
         <td>见全局/系统参数</td>
     </tr>
-    <tr>
-        <td>fromActivity</td>
-        <td>IdName</td>
-        <td>来源活动</td>
-        <td>见全局/系统参数</td>
-    </tr>
-    <tr>
-        <td>status</td>
-        <td>Status</td>
-        <td>状态</td>
-        <td>参见全局系统参数</td>
-    </tr>
 </table>
 
 ## 添加患者
 
 ```
-POST /shop/patient/v1/patient
+POST /clinic/crm/v1/patient
 ```
 
 >请求参数
@@ -183,7 +171,7 @@ POST /shop/patient/v1/patient
         <td>患者ID, 新增时不传, 选择时传选中患者ID</td>
     </tr>
     <tr>
-        <td>shopId</td>
+        <td>clinicId</td>
         <td>string</td>
         <td>是</td>
         <td>门店ID</td>
@@ -287,7 +275,7 @@ POST /shop/patient/v1/patient
 ## 患者列表
 
 ```
-GET /shop/patient/v1/patient
+GET /clinic/crm/v1/patient
 ```
 
 >请求参数
@@ -299,7 +287,7 @@ GET /shop/patient/v1/patient
         <th style="width:200px;">说明</th>
     </tr>
     <tr>
-        <td>shopId</td>
+        <td>clinicId</td>
         <td>string</td>
         <td>-</td>
         <td>门店Id</td>
@@ -346,17 +334,17 @@ GET /shop/patient/v1/patient
 ## 编辑患者
 
 ```
-PATCH /shop/patient/v1/patient/:id
+PATCH /clinic/crm/v1/patient/:id
 ```
 
 ## 查看患者
 
 ```
-GET /shop/patient/v1/patient/:id
+GET /clinic/crm/v1/patient/:id
 ```
 
 ## 删除患者
 
 ```
-DELETE /shop/patient/v1/patient/:id
+DELETE /clinic/crm/v1/patient/:id
 ```
