--- a/门店/检查/检查套餐.md
+++ b/门店/检查/检查套餐.md
@@ -63,7 +63,7 @@
 ## 门店检查套餐列表
 
 ```
-GET /shop/combo/v1/combo
+GET /clinic/combo/v1/combo
 ```
 > 请求参数
 
@@ -74,7 +74,7 @@ GET /shop/combo/v1/combo
         <th style="width:200px;">说明</th>
     </tr>
     <tr>
-        <td>shopId</td>
+        <td>clinicId</td>
         <td>-</td>
         <td>门店ID</td>
     </tr>
@@ -83,13 +83,13 @@ GET /shop/combo/v1/combo
 ## 查看检查套餐
 
 ```
-GET /shop/combo/v1/combo/:id
+GET /clinic/combo/v1/combo/:id
 ```
 
 ## 所有检查项
 
 ```
-GET /shop/combo/v1/item
+GET /clinic/combo/v1/item
 ```
 > 请求参数
 
@@ -100,7 +100,7 @@ GET /shop/combo/v1/item
         <th style="width:200px;">说明</th>
     </tr>
     <tr>
-        <td>shopId</td>
+        <td>clinicId</td>
         <td>-</td>
         <td>门店ID</td>
     </tr>
