--- a/门店/账单/支付.md
+++ b/门店/账单/支付.md
@@ -23,7 +23,7 @@
         <th>备注</th>
     </tr>
     <tr>
-        <td>shopId</td>
+        <td>clinicId</td>
         <td>string</td>
         <td>门店ID</td>
         <td>-</td>
@@ -69,7 +69,7 @@
 ## 支付
 
 ```
-POST /shop/bill/v1/bill/pay
+POST /clinic/bill/v1/bill/pay
 ```
 
 > 请求参数
@@ -133,7 +133,7 @@ POST /shop/bill/v1/bill/pay
 ## 作废支付
 
 ```
-POST /shop/bill/v1/bill/pay/cancel
+POST /clinic/bill/v1/bill/pay/cancel
 ```
 > 请求参数
 
