--- a/门店/账单/账单.md
+++ b/门店/账单/账单.md
@@ -10,7 +10,7 @@
         <th>备注</th>
     </tr>
     <tr>
-        <td>shopId</td>
+        <td>clinicId</td>
         <td>string</td>
         <td>门店ID</td>
         <td>-</td>
@@ -68,7 +68,7 @@
 ## 划价(检查单)
 
 ```
-POST /shop/bill/v1/bill/create-by-optometry
+POST /clinic/bill/v1/bill/create-by-optometry
 ```
 
 >请求参数
@@ -114,7 +114,7 @@ POST /shop/bill/v1/bill/create-by-optometry
 ## 划价(处置单)
 
 ```
-POST /shop/bill/v1/bill/create-by-treatment
+POST /clinic/bill/v1/bill/create-by-treatment
 ```
 
 >请求参数
@@ -240,17 +240,17 @@ POST /shop/bill/v1/bill/create-by-treatment
 ## 列表
 
 ```
-GET /shop/bill/v1/bill
+GET /clinic/bill/v1/bill
 ```
 
 ## 查看
 
 ```
-GET /shop/bill/v1/bill/:id
+GET /clinic/bill/v1/bill/:id
 ```
 
 ## 取消
 
 ```
-POST /shop/bill/v1/bill/cancel
+POST /clinic/bill/v1/bill/cancel
 ```
