--- a/门店/预付款/预付款.md
+++ b/门店/预付款/预付款.md
@@ -16,7 +16,7 @@
         <td>recharge("充值") refund("退款") transfer("转移")</td>
     </tr>
     <tr>
-        <td>shopId</td>
+        <td>clinicId</td>
         <td>string</td>
         <td>门店ID</td>
         <td>-</td>
@@ -80,7 +80,7 @@
 ## 预付款记录
 
 ```
-GET /shop/balance/v1/balance
+GET /clinic/balance/v1/balance
 ```
 
 >请求参数
@@ -92,7 +92,7 @@ GET /shop/balance/v1/balance
         <th style="width:200px;">说明</th>
     </tr>
     <tr>
-        <td>shopId</td>
+        <td>clinicId</td>
         <td>string</td>
         <td>是</td>
         <td>门店ID</td>
@@ -108,7 +108,7 @@ GET /shop/balance/v1/balance
 ## 预付款充值/退款/转移
 
 ```
-POST /shop/balance/v1/balance
+POST /clinic/balance/v1/balance
 ```
 
 >请求参数
@@ -126,7 +126,7 @@ POST /shop/balance/v1/balance
         <td>recharge("充值") refund("退款") transfer("转移")</td>
     </tr>
     <tr>
-        <td>shopId</td>
+        <td>clinicId</td>
         <td>string</td>
         <td>是</td>
         <td>门店ID</td>
