--- a/门店/商品/品牌型号.md
+++ b/门店/商品/品牌型号.md
@@ -20,7 +20,7 @@
 ## 品牌列表
 
 ```
-GET /shop/product/v1/brand
+GET /clinic/product/v1/brand
 ```
 
 >请求参数
@@ -32,7 +32,7 @@ GET /shop/product/v1/brand
         <th style="width:200px;">说明</th>
     </tr>
     <tr>
-        <td>shopId</td>
+        <td>clinicId</td>
         <td>string</td>
         <td>是</td>
         <td>门店ID</td>
@@ -48,7 +48,7 @@ GET /shop/product/v1/brand
 ## 型号列表
 
 ```
-GET /shop/product/v1/model
+GET /clinic/product/v1/model
 ```
 
 >请求参数
@@ -60,7 +60,7 @@ GET /shop/product/v1/model
         <th style="width:200px;">说明</th>
     </tr>
     <tr>
-        <td>shopId</td>
+        <td>clinicId</td>
         <td>string</td>
         <td>是</td>
         <td>门店ID</td>
