--- a/门店/商品/库存查询.md
+++ b/门店/商品/库存查询.md
@@ -3,7 +3,7 @@
 ## 库存查询
 
 ```
-GET /shop/product/v1/stock
+GET /clinic/product/v1/stock
 ```
 
 >请求参数
@@ -15,7 +15,7 @@ GET /shop/product/v1/stock
         <th style="width:200px;">说明</th>
     </tr>
     <tr>
-        <td>shopId</td>
+        <td>clinicId</td>
         <td>string</td>
         <td>是</td>
         <td>门店ID</td>
@@ -49,7 +49,7 @@ GET /shop/product/v1/stock
 ## 库存导出
 
 ```
-GET /shop/product/v1/stock/export
+GET /clinic/product/v1/stock/export
 ```
 
 >请求参数
@@ -61,7 +61,7 @@ GET /shop/product/v1/stock/export
         <th style="width:200px;">说明</th>
     </tr>
     <tr>
-        <td>shopId</td>
+        <td>clinicId</td>
         <td>string</td>
         <td>是</td>
         <td>门店ID</td>
