--- a/门店/检查/检查单.md
+++ b/门店/检查/检查单.md
@@ -10,7 +10,7 @@
         <th>备注</th>
     </tr>
     <tr>
-        <td>shopId</td>
+        <td>clinicId</td>
         <td>string</td>
         <td>门店ID</td>
         <td>-</td>
@@ -39,7 +39,7 @@
 ## 新建
 
 ```
-POST /shop/optometry/v1/optometry
+POST /clinic/optometry/v1/optometry
 ```
 
 >请求参数
@@ -51,7 +51,7 @@ POST /shop/optometry/v1/optometry
         <th style="width:200px;">说明</th>
     </tr>
     <tr>
-        <td>shopId</td>
+        <td>clinicId</td>
         <td>string</td>
         <td>是</td>
         <td>门店ID</td>
@@ -67,19 +67,19 @@ POST /shop/optometry/v1/optometry
 ## 列表
 
 ```
-GET /shop/optometry/v1/optometry
+GET /clinic/optometry/v1/optometry
 ```
 
 ## 查看
 
 ```
-GET /shop/optometry/v1/optometry/:id
+GET /clinic/optometry/v1/optometry/:id
 ```
 
 ## 取消
 
 ```
-POST /shop/optometry/v1/optometry/cancel
+POST /clinic/optometry/v1/optometry/cancel
 ```
 
 >请求参数
@@ -107,5 +107,5 @@ POST /shop/optometry/v1/optometry/cancel
 ## 删除
 
 ```
-DELETE /shop/optometry/v1/optometry/:id
+DELETE /clinic/optometry/v1/optometry/:id
 ```
