--- a/门店/问卷/问卷.md
+++ b/门店/问卷/问卷.md
@@ -110,7 +110,7 @@
 ## 患者问卷
 
 ```
-GET /shop/survey/v1/survey/view
+GET /clinic/survey/v1/survey/view
 ```
 > 请求参数
 
@@ -121,7 +121,7 @@ GET /shop/survey/v1/survey/view
         <th style="width:200px;">说明</th>
     </tr>
     <tr>
-        <td>shopId</td>
+        <td>clinicId</td>
         <td>-</td>
         <td>门店ID</td>
     </tr>
@@ -135,7 +135,7 @@ GET /shop/survey/v1/survey/view
 ## 提交问卷
 
 ```
-POST /shop/survey/v1/survey
+POST /clinic/survey/v1/survey
 ```
 
 >请求参数
@@ -153,7 +153,7 @@ POST /shop/survey/v1/survey
         <td>调查表类型</td>
     </tr>
     <tr>
-        <td>shopId</td>
+        <td>clinicId</td>
         <td>string</td>
         <td>是</td>
         <td>门店ID</td>
