--- a/门店/商品/厂商供应商.md
+++ b/门店/商品/厂商供应商.md
@@ -17,14 +17,20 @@
     </tr>
     <tr>
         <td>type</td>
-        <td>CompanyType</td>
+        <td>string</td>
         <td>性质</td>
-        <td>Supplier("供应商"),Manufacturer("生产厂商")</td>
+        <td>manufacturer("生产厂商"),dealer("经销商")</td>
     </tr>
     <tr>
-        <td>uniformSocialCreditCode</td>
+        <td>code</td>
         <td>string</td>
         <td>统一社会信用代码</td>
+        <td>-</td>
+    </tr>
+    <tr>
+        <td>contact</td>
+        <td>string</td>
+        <td>联系方式</td>
         <td>-</td>
     </tr>
     <tr>
@@ -35,62 +41,212 @@
     </tr>
     <tr>
         <td>legalPerson</td>
-        <td>Person</td>
+        <td>string</td>
         <td>法人</td>
-        <td>name: 姓名 idcard: 身份证 mobile: 手机号</td>
+        <td>-</td>
     </tr>
     <tr>
-        <td>salesmanName</td>
-        <td>Person</td>
+        <td>salesman</td>
+        <td>string</td>
         <td>业务员</td>
-        <td>name: 姓名 idcard: 身份证 mobile: 手机号</td>
+        <td>-</td>
     </tr>
     <tr>
         <td>businessScope</td>
         <td>string</td>
         <td>生产经营范围</td>
         <td>-</td>
-    </tr>    
-    <tr>
-        <td>medicalBusinessLicense</td>
-        <td>License</td>
-        <td>医疗器械经营许可证号</td>
-        <td>name: 名称 number: 号码 expirationDate: 过期日期 file: 文件地址</td>
     </tr>
     <tr>
-        <td>medicalProductionLicense</td>
-        <td>License</td>
-        <td>医疗器械生产许可证号</td>
-        <td>name: 名称 number: 号码 expirationDate: 过期日期 file: 文件地址</td>
-    </tr>    
-    <tr>
         <td>status</td>
-        <td>Status</td>
+        <td>string</td>
         <td>状态</td>
+        <td>auditing('审核中'),ok('正常'),expired('过期'),forbidden('禁用')</td>
+    </tr>
+    <tr>
+        <td>remark</td>
+        <td>string</td>
         <td>-</td>
+        <td>备注</td>
     </tr>
 </table>
 
 ## 厂商列表
 
 ```
-GET /clinic/product/v1/company
+GET /clinic/psi/v1/company
 ```
+
+>请求参数
+<table>
+    <tr>
+        <th style="width:150px;">参数</th>
+        <th style="width:60px;">类型</th>
+        <th style="width:60px;">名称</th>
+        <th style="width:60px;">必填</th>
+    </tr>
+    <tr>
+        <td>keyword</td>
+        <td>string</td>        
+        <td>关键词</td>
+        <td>-</td>
+    </tr>
+    <tr>
+        <td>type</td>
+        <td>string</td>
+        <td>manufacturer("生产厂商"),dealer("经销商")</td>
+        <td>-</td>
+    </tr>
+</table>
 
 ## 添加厂商
 
 ```
-GET /clinic/product/v1/company
+GET /clinic/psi/v1/company
 ```
+
+>请求参数
+<table>
+    <tr>
+        <th style="width:150px;">参数</th>
+        <th style="width:60px;">类型</th>
+        <th style="width:60px;">名称</th>
+        <th style="width:60px;">必填</th>
+    </tr>
+    <tr>
+        <td>name</td>
+        <td>string</td>        
+        <td>名称</td>
+        <td>是</td>
+    </tr>
+    <tr>
+        <td>type</td>
+        <td>string</td>
+        <td>manufacturer("生产厂商"),dealer("经销商")</td>
+        <td>是</td>
+    </tr>
+    <tr>
+        <td>code</td>
+        <td>string</td>
+        <td>统一社会信用代码</td>
+        <td>-</td>
+    </tr>
+    <tr>
+        <td>contact</td>
+        <td>string</td>        
+        <td>联系方式</td>
+        <td>-</td>
+    </tr>
+    <tr>
+        <td>address</td>
+        <td>string</td>        
+        <td>地址</td>
+        <td>-</td>
+    </tr>
+    <tr>
+        <td>legalPerson</td>
+        <td>string</td>        
+        <td>法人</td>
+        <td>-</td>
+    </tr>
+    <tr>
+        <td>salesman</td>
+        <td>string</td>        
+        <td>业务员</td>
+        <td>-</td>
+    </tr>
+    <tr>
+        <td>businessScope</td>
+        <td>string</td>        
+        <td>生产经营范围</td>
+        <td>-</td>
+    </tr>
+    <tr>
+        <td>businessScope</td>
+        <td>string</td>        
+        <td>生产经营范围</td>
+        <td>-</td>
+    </tr>
+    <tr>
+        <td>license</td>
+        <td>array</td>        
+        <td>证书列表</td>
+        <td>见证书接口, 范例: [{'name':'生产许可证','code':'证号','expiration':16532123,'file':'file1.jpg,file2.jpg'}]</td>
+    </tr>
+</table>
 
 ## 编辑厂商
 
 ```
-PATCH /clinic/product/v1/company/:id
+PATCH /clinic/psi/v1/company/:id
 ```
+
+>请求参数
+<table>
+    <tr>
+        <th style="width:150px;">参数</th>
+        <th style="width:60px;">类型</th>
+        <th style="width:60px;">名称</th>
+        <th style="width:60px;">必填</th>
+    </tr>
+    <tr>
+        <td>name</td>
+        <td>string</td>        
+        <td>名称</td>
+        <td>-</td>
+    </tr>
+    <tr>
+        <td>type</td>
+        <td>string</td>
+        <td>manufacturer("生产厂商"),dealer("经销商")</td>
+        <td>-</td>
+    </tr>
+    <tr>
+        <td>code</td>
+        <td>string</td>
+        <td>统一社会信用代码</td>
+        <td>-</td>
+    </tr>
+    <tr>
+        <td>contact</td>
+        <td>string</td>        
+        <td>联系方式</td>
+        <td>-</td>
+    </tr>
+    <tr>
+        <td>address</td>
+        <td>string</td>        
+        <td>地址</td>
+        <td>-</td>
+    </tr>
+    <tr>
+        <td>legalPerson</td>
+        <td>string</td>        
+        <td>法人</td>
+        <td>-</td>
+    </tr>
+    <tr>
+        <td>salesman</td>
+        <td>string</td>        
+        <td>业务员</td>
+        <td>-</td>
+    </tr>
+    <tr>
+        <td>businessScope</td>
+        <td>string</td>        
+        <td>生产经营范围</td>
+        <td>-</td>
+    </tr>
+    <tr>
+        <td>businessScope</td>
+        <td>string</td>        
+        <td>生产经营范围</td>
+        <td>-</td>
+    </tr>
+</table>
 
 ## 删除厂商
 
 ```
-DELETE /clinic/product/v1/company/:id
+DELETE /clinic/psi/v1/company/:id
 ```
