--- a/门店/商品/证书.md
+++ b/门店/商品/证书.md
@@ -81,20 +81,48 @@ GET /clinic/psi/v1/license
     </tr>
 </table>
 
-## 添加厂商
+## 添加证书
 
 ```
-GET /clinic/psi/v1/company
+GET /clinic/psi/v1/license
 ```
 
-## 编辑厂商
+>请求参数
+<table>
+    <tr>
+        <th style="width:150px;">名称</th>
+        <th style="width:60px;">类型</th>
+        <th style="width:60px;">必填</th>
+        <th style="width:200px;">说明</th>
+    </tr>
+    <tr>
+        <td>category</td>
+        <td>string</td>
+        <td>-</td>
+        <td>类别</td>
+    </tr>
+    <tr>
+        <td>targetId</td>
+        <td>string</td>
+        <td>-</td>
+        <td>目标ID</td>
+    </tr>
+    <tr>
+        <td>其它字段</td>
+        <td>string</td>
+        <td>-</td>
+        <td>其它字段</td>
+    </tr>
+</table>
+
+## 编辑证书
 
 ```
-PATCH /clinic/psi/v1/company/:id
+PATCH /clinic/psi/v1/license/:id
 ```
 
-## 删除厂商
+## 删除证书
 
 ```
-DELETE /clinic/psi/v1/company/:id
+DELETE /clinic/psi/v1/license/:id
 ```
