--- a/门店/商品/商品分类.md
+++ b/门店/商品/商品分类.md
@@ -15,10 +15,120 @@
         <td>名称</td>
         <td>-</td>
     </tr>
+    <tr>
+        <td>gsp</td>
+        <td>bool</td>
+        <td>是否GSP商品</td>
+        <td>-</td>
+    </tr>
+    <tr>
+        <td>sort</td>
+        <td>int</td>
+        <td>排序</td>
+        <td>越大越靠前</td>
+    </tr>
+    <tr>
+        <td>parentId</td>
+        <td>string</td>
+        <td>上级ID</td>
+        <td>-</td>
+    </tr>
+    <tr>
+        <td>tag</td>
+        <td>string</td>
+        <td>标签</td>
+        <td>逗号分隔, 仅顶级分类需要设置</td>
+    </tr>
 </table>
 
 ## 分类列表
 
 ```
-GET /clinic/product/v1/category
+GET /clinic/psi/v1/category
+```
+
+## 添加分类
+
+```
+GET /clinic/psi/v1/category
+```
+
+>请求参数
+<table>
+    <tr>
+        <th style="width:150px;">参数</th>
+        <th style="width:60px;">类型</th>
+        <th style="width:60px;">名称</th>
+        <th style="width:200px;">必填</th>
+    </tr>
+    <tr>
+        <td>name</td>
+        <td>string</td>
+        <td>名称</td>
+        <td>是</td>
+    </tr>
+    <tr>
+        <td>gsp</td>
+        <td>bool</td>
+        <td>是否GSP商品</td>
+        <td>是</td>
+    </tr>
+    <tr>
+        <td>sort</td>
+        <td>int</td>
+        <td>排序</td>
+        <td>-</td>
+    </tr>
+    <tr>
+        <td>parentId</td>
+        <td>string</td>
+        <td>上级ID</td>
+        <td>-</td>
+    </tr>
+    <tr>
+        <td>tag</td>
+        <td>string</td>
+        <td>标签, 逗号分隔, 仅顶级分类需要设置</td>
+        <td>-</td>
+    </tr>
+</table>
+
+## 编辑分类
+
+```
+PATCH /clinic/psi/v1/category/:id
+```
+
+>请求参数
+<table>
+    <tr>
+        <th style="width:150px;">参数</th>
+        <th style="width:60px;">类型</th>
+        <th style="width:60px;">名称</th>
+        <th style="width:200px;">必填</th>
+    </tr>
+    <tr>
+        <td>name</td>
+        <td>string</td>
+        <td>名称</td>
+        <td>是</td>
+    </tr>
+    <tr>
+        <td>sort</td>
+        <td>int</td>
+        <td>排序</td>
+        <td>-</td>
+    </tr>
+    <tr>
+        <td>tag</td>
+        <td>string</td>
+        <td>标签, 逗号分隔, 仅顶级分类需要设置</td>
+        <td>-</td>
+    </tr>
+</table>
+
+## 删除分类
+
+```
+DELETE /clinic/psi/v1/category/:id
 ```
