--- a/全局/使用说明.md
+++ b/全局/使用说明.md
@@ -12,10 +12,13 @@
 
 ## URL分配
 -------------------------
-- 接口: https://crmtest.qingpai365.com/clinicapi
-- 门店WEB: https://crmtest.qingpai365.com/clinicweb
-- 门店微信: https://crmtest.qingpai365.com/clinicwechat
-- 门店管理后台: https://crmtest.qingpai365.com/adminweb
+- 诊所接口: https://crmtest.qingpai365.com/clinic/api
+- 诊所WEB: https://crmtest.qingpai365.com/clinic/web
+- 诊所微信: https://crmtest.qingpai365.com/clinic/wechat
+
+### 门店管理
+- 门店管理接口: https://crmtest.qingpai365.com/admin/api
+- 门店管理后台: https://crmtest.qingpai365.com/admin/web
 
 ## 测试账号
 -------------------------
