--- a/管理/客户.md
+++ b/管理/客户.md
@@ -81,7 +81,7 @@
 ## 客户列表
 
 ```
-GET /api/admin/client
+GET /client
 ```
 
 >请求参数
@@ -105,7 +105,7 @@ GET /api/admin/client
 ## 添加客户
 
 ```
-POST /api/admin/client
+POST /client
 ```
 
 >请求参数
@@ -284,18 +284,18 @@ POST /api/admin/client
 ## 编辑客户
 
 ```
-PATCH /api/admin/client/:id
+PATCH /client/:id
 ```
 >请求参数, 同添加, 参数全部是可选的
 
 ## 查看客户
 
 ```
-GET /api/admin/client/:id
+GET /client/:id
 ```
 
 ## 删除客户
 
 ```
-DELETE /api/admin/client/:id
+DELETE /client/:id
 ```
