--- a/管理/用户.md
+++ b/管理/用户.md
@@ -93,7 +93,7 @@
 ## 用户列表
 
 ```
-GET /api/admin/user
+GET /user
 ```
 
 >请求参数
@@ -124,7 +124,7 @@ GET /api/admin/user
 ## 编辑用户
 
 ```
-PATCH /api/admin/user/:id
+PATCH /user/:id
 ```
 >请求参数
 
@@ -197,5 +197,5 @@ PATCH /api/admin/user/:id
 ## 查看用户
 
 ```
-GET /api/admin/user/:id
+GET /user/:id
 ```
