--- a/管理/诊所.md
+++ b/管理/诊所.md
@@ -87,7 +87,7 @@
 ## 诊所列表
 
 ```
-GET /api/admin/clinic
+GET /clinic
 ```
 
 >请求参数
@@ -118,7 +118,7 @@ GET /api/admin/clinic
 ## 添加诊所
 
 ```
-POST /api/admin/clinic
+POST /clinic
 ```
 
 >请求参数
@@ -205,18 +205,18 @@ POST /api/admin/clinic
 ## 编辑诊所
 
 ```
-PATCH /api/admin/clinic/:id
+PATCH /clinic/:id
 ```
 >请求参数, 同添加, 参数全部是可选的
 
 ## 查看诊所
 
 ```
-GET /api/admin/clinic/:id
+GET /clinic/:id
 ```
 
 ## 删除诊所
 
 ```
-DELETE /api/admin/clinic/:id
+DELETE /clinic/:id
 ```
