--- a/门店/检查/检查项目.md
+++ b/门店/检查/检查项目.md
@@ -1,4 +1,4 @@
-# 检查数据
+# 检查项目
 
 > 更新记录
 
@@ -23,269 +23,51 @@
         <th>备注</th>
     </tr>
     <tr>
-        <td>userName</td>
+        <td>category</td>
         <td>string</td>
-        <td>创建员工姓名</td>
-        <td>-</td>
-    </tr>
-    <tr>
-        <td>customerName</td>
-        <td>string</td>
-        <td>患者名</td>
-        <td>-</td>
-    </tr>
-    <tr>
-        <td>combo</td>
-        <td>string</td>
-        <td>检查套餐</td>
-        <td>-</td>
-    </tr>
-    <tr>
-        <td>data</td>
-        <td>OptometryData</td>
-        <td>调查表数据</td>
-        <td>见检查参数</td>
-    </tr>
-    <tr>
-        <td>symptom</td>
-        <td>string</td>
-        <td>症状</td>
-        <td>-</td>
-    </tr>
-    <tr>
-        <td>pic</td>
-        <td>string</td>
-        <td>图片</td>
-        <td>多张图片用,分隔</td>
-    </tr>
-    <tr>
-        <td>device</td>
-        <td>Device</td>
-        <td>设备</td>
-        <td>参见设备</td>
-    </tr>
-    <tr>
-        <td>checkUsername</td>
-        <td>string</td>
-        <td>检查员工</td>
-        <td>-</td>
-    </tr>
-    <tr>
-        <td>checkDateTime</td>
-        <td>DateTime</td>
-        <td>检查日期时间</td>
-        <td>-</td>
-    </tr>
-    <tr>
-        <td>diagnosis</td>
-        <td>string</td>
-        <td>诊断</td>
-        <td>-</td>
-    </tr>
-    <tr>
-        <td>suggestion</td>
-        <td>string</td>
-        <td>建议</td>
-        <td>-</td>
-    </tr>
-    <tr>
-        <td>remark</td>
-        <td>string</td>
-        <td>备注</td>
-        <td>-</td>
-    </tr>
-    <tr>
-        <td>payStatus</td>
-        <td>Status</td>
-        <td>状态</td>
-        <td>waiting("待付款"), ok("已付款")</td>
-    </tr>
-    <tr>
-        <td>status</td>
-        <td>Status</td>
-        <td>状态</td>
-        <td>waiting("开单中"), doing("检查中"), ok("完成")</td>
-    </tr>
-</table>
-
-## 等检查列表(包含今日已完成列表)
-
-```
-GET /clinic/optometry/v1/item/check
-```
-> 请求参数
-
-<table>
-    <tr>
-        <th style="width:150px;">属性名称</th>
-        <th style="width:60px;">必填</th>
-        <th style="width:200px;">说明</th>
-    </tr>
-    <tr>
-        <td>customerId</td>
-        <td>是</td>
-        <td>患者ID</td>
-    </tr>
-</table>
-
->返回值
-
-<table>
-    <tr>
-        <th style="width:150px;">属性名称</th>
-        <th style="width:60px;">类型</th>
-        <th style="width:200px;">说明</th>
-    </tr>
-    <tr>
-        <td>waitingList</td>
-        <td>array</td>
-        <td>待检查列表</td>
-    </tr>
-    <tr>
-        <td>todayList</td>
-        <td>array</td>
-        <td>今日已完成</td>
-    </tr>
-</table>
-
-
-## 检查项列表
-
-```
-GET /clinic/optometry/v1/item
-```
-> 请求参数
-
-<table>
-    <tr>
-        <th style="width:150px;">属性名称</th>
-        <th style="width:60px;">必填</th>
-        <th style="width:200px;">说明</th>
-    </tr>
-    <tr>
-        <td>optometryId</td>
-        <td>是</td>
-        <td>检查单ID</td>
-    </tr>
-</table>
-
-## 查看检查项
-
-```
-GET /clinic/optometry/v1/item/:id
-```
-
-## 添加(按套餐)
-
-```
-POST /clinic/optometry/v1/item/create-by-combo
-```
-
->请求参数
-<table>
-    <tr>
-        <th style="width:150px;">名称</th>
-        <th style="width:60px;">类型</th>
-        <th style="width:60px;">必填</th>
-        <th style="width:200px;">说明</th>
-    </tr>
-    <tr>
-        <td>optometryId</td>
-        <td>string</td>
-        <td>是</td>
-        <td>检查单ID</td>
-    </tr>
-    <tr>
-        <td>combo</td>
-        <td>string</td>
-        <td>检查套餐名称</td>
-        <td>-</td>
-    </tr>
-</table>
-
-## 添加(按检查项)
-
-```
-POST /clinic/optometry/v1/item/create-by-comboitem
-```
-
->请求参数
-<table>
-    <tr>
-        <th style="width:150px;">名称</th>
-        <th style="width:60px;">类型</th>
-        <th style="width:60px;">必填</th>
-        <th style="width:200px;">说明</th>
-    </tr>
-    <tr>
-        <td>optometryId</td>
-        <td>string</td>
-        <td>是</td>
-        <td>检查单ID</td>
+        <td>类型</td>
+        <td>normal: 常规检查项 ok: 角膜塑形镜</td>
     </tr>
     <tr>
         <td>name</td>
         <td>string</td>
-        <td>检查项名称</td>
-        <td>-</td>
-    </tr>
-</table>
-
-
-## 提交检查项数据
-
-```
-POST /clinic/optometry/v1/item/data
-```
-
->请求参数
-<table>
-    <tr>
-        <th style="width:150px;">名称</th>
-        <th style="width:60px;">类型</th>
-        <th style="width:60px;">必填</th>
-        <th style="width:200px;">说明</th>
-    </tr>
-    <tr>
-        <td>id</td>
-        <td>检查项ID</td>
-        <td>是</td>
+        <td>名称</td>
         <td>-</td>
     </tr>
     <tr>
-        <td>data</td>
-        <td>检查项数据</td>
-        <td>是</td>
-        <td>检查数据，见检查参数</td>
-    </tr>
-    <tr>
-        <td>deviceId</td>
-        <td>检查设备ID</td>
-        <td>-</td>
-        <td>-</td>
-    </tr>
-    <tr>
-        <td>symptom</td>
+        <td>description</td>
         <td>string</td>
-        <td>症状</td>
+        <td>描述</td>
         <td>-</td>
     </tr>
     <tr>
-        <td>pic</td>
-        <td>string</td>
-        <td>图片</td>
-        <td>多张图片用,分隔</td>
-    </tr>
-    <tr>
-        <td>diagnosis</td>
-        <td>string</td>
-        <td>诊断</td>
+        <td>price</td>
+        <td>int</td>
+        <td>价格 单位: 分</td>
         <td>-</td>
     </tr>
     <tr>
-        <td>suggestion</td>
-        <td>string</td>
-        <td>建议</td>
+        <td>doubleEye</td>
+        <td>bool</td>
+        <td>是否双眼检查</td>
+        <td>-</td>
+    </tr>
+    <tr>
+        <td>fileModule</td>
+        <td>bool</td>
+        <td>是否需要检查附件上传</td>
+        <td>-</td>
+    </tr>
+    <tr>
+        <td>resultModule</td>
+        <td>bool</td>
+        <td>是否需要检查结果录入</td>
+        <td>-</td>
+    </tr>
+    <tr>
+        <td>remarkModule</td>
+        <td>bool</td>
+        <td>是否需要备注</td>
         <td>-</td>
     </tr>
     <tr>
@@ -296,64 +78,192 @@ POST /clinic/optometry/v1/item/data
     </tr>
 </table>
 
-## 删除(按套餐)
+## 添加检查项
 
 ```
-DELETE /clinic/optometry/v1/item/delete-by-combo
+GET /clinic/optometry/item/v1/item
 ```
+> 请求参数
 
->请求参数
 <table>
     <tr>
-        <th style="width:150px;">名称</th>
+        <th style="width:150px;">属性名称</th>
         <th style="width:60px;">类型</th>
         <th style="width:60px;">必填</th>
         <th style="width:200px;">说明</th>
     </tr>
     <tr>
-        <td>optometryId</td>
+        <td>clinicId</td>
         <td>string</td>
         <td>是</td>
-        <td>检查单ID</td>
+        <td>门店ID</td>
     </tr>
     <tr>
-        <td>combo</td>
-        <td>string</td>
-        <td>检查套餐名称</td>
-        <td>-</td>
-    </tr>
-</table>
-
-## 删除(按检查项)
-
-```
-DELETE /clinic/optometry/v1/item/delete-by-comboitem
-```
-
->请求参数
-<table>
-    <tr>
-        <th style="width:150px;">名称</th>
-        <th style="width:60px;">类型</th>
-        <th style="width:60px;">必填</th>
-        <th style="width:200px;">说明</th>
-    </tr>
-    <tr>
-        <td>optometryId</td>
+        <td>category</td>
         <td>string</td>
         <td>是</td>
-        <td>检查单ID</td>
+        <td>类型, normal: 常规检查项 ok: 角膜塑形镜</td>
     </tr>
     <tr>
         <td>name</td>
         <td>string</td>
-        <td>检查项名称</td>
+        <td>是</td>
+        <td>名称</td>
+    </tr>
+    <tr>
+        <td>description</td>
+        <td>string</td>
         <td>-</td>
+        <td>描述</td>
+    </tr>
+    <tr>
+        <td>price</td>
+        <td>int</td>
+        <td>-</td>
+        <td>价格 单位: 分</td>
+    </tr>
+    <tr>
+        <td>doubleEye</td>
+        <td>bool</td>
+        <td>-</td>
+        <td>是否双眼检查</td>
+    </tr>
+    <tr>
+        <td>fileModule</td>
+        <td>bool</td>
+        <td>-</td>
+        <td>是否需要检查附件上传</td>
+    </tr>
+    <tr>
+        <td>resultModule</td>
+        <td>bool</td>
+        <td>-</td>
+        <td>是否需要检查结果录入</td>
+    </tr>
+    <tr>
+        <td>remarkModule</td>
+        <td>bool</td>
+        <td>-</td>
+        <td>是否需要备注</td>
+    </tr>
+    <tr>
+        <td>remark</td>
+        <td>string</td>
+        <td>-</td>
+        <td>备注</td>
     </tr>
 </table>
 
-## 删除
+## 编辑检查项
 
 ```
-DELETE /clinic/optometry/v1/item/:id
+PATCH /clinic/optometry/item/v1/item/:id
 ```
+> 请求参数
+
+<table>
+    <tr>
+        <th style="width:150px;">属性名称</th>
+        <th style="width:60px;">类型</th>
+        <th style="width:60px;">必填</th>
+        <th style="width:200px;">说明</th>
+    </tr>
+    <tr>
+        <td>description</td>
+        <td>string</td>
+        <td>-</td>
+        <td>描述</td>
+    </tr>
+    <tr>
+        <td>price</td>
+        <td>int</td>
+        <td>-</td>
+        <td>价格 单位: 分</td>
+    </tr>
+    <tr>
+        <td>doubleEye</td>
+        <td>bool</td>
+        <td>-</td>
+        <td>是否双眼检查</td>
+    </tr>
+    <tr>
+        <td>fileModule</td>
+        <td>bool</td>
+        <td>-</td>
+        <td>是否需要检查附件上传</td>
+    </tr>
+    <tr>
+        <td>resultModule</td>
+        <td>bool</td>
+        <td>-</td>
+        <td>是否需要检查结果录入</td>
+    </tr>
+    <tr>
+        <td>remarkModule</td>
+        <td>bool</td>
+        <td>-</td>
+        <td>是否需要备注</td>
+    </tr>
+    <tr>
+        <td>remark</td>
+        <td>string</td>
+        <td>-</td>
+        <td>备注</td>
+    </tr>
+</table>
+
+## 删除检查项
+
+```
+DELETE /clinic/optometry/item/v1/item/:id
+```
+
+## 诊所已经选择的检查项列表
+
+```
+GET /clinic/optometry/item/v1/item
+```
+> 请求参数
+
+<table>
+    <tr>
+        <th style="width:150px;">属性名称</th>
+        <th style="width:60px;">类型</th>
+        <th style="width:60px;">必填</th>
+        <th style="width:200px;">说明</th>
+    </tr>
+    <tr>
+        <td>clinicId</td>
+        <td>string</td>
+        <td>是</td>
+        <td>诊所ID</td>
+    </tr>
+</table>
+
+## 系统支持的所有检查项列表
+
+```
+GET /clinic/optometry/item/v1/item/default
+```
+> 请求参数
+
+<table>
+    <tr>
+        <th style="width:150px;">属性名称</th>
+        <th style="width:60px;">类型</th>
+        <th style="width:60px;">必填</th>
+        <th style="width:200px;">说明</th>
+    </tr>
+    <tr>
+        <td>category</td>
+        <td>string</td>
+        <td>-</td>
+        <td>类别, normal: 普通检查 ok: 角膜塑形镜</td>
+    </tr>
+    <tr>
+        <td>keyword</td>
+        <td>string</td>
+        <td>-</td>
+        <td>搜索关键词</td>
+    </tr>
+</table>
