--- a/诊所/设置/检查项目.md
+++ b/诊所/设置/检查项目.md
@@ -81,7 +81,7 @@
 ## 添加检查项
 
 ```
-GET /clinic/optometry/item/v1/item
+GET /clinic/setting/v1/item
 ```
 > 请求参数
 
@@ -157,7 +157,7 @@ GET /clinic/optometry/item/v1/item
 ## 编辑检查项
 
 ```
-PATCH /clinic/optometry/item/v1/item/:id
+PATCH /clinic/setting/v1/item/:id
 ```
 > 请求参数
 
@@ -215,13 +215,13 @@ PATCH /clinic/optometry/item/v1/item/:id
 ## 删除检查项
 
 ```
-DELETE /clinic/optometry/item/v1/item/:id
+DELETE /clinic/setting/v1/item/:id
 ```
 
 ## 诊所已经选择的检查项列表
 
 ```
-GET /clinic/optometry/item/v1/item
+GET /clinic/setting/v1/item
 ```
 > 请求参数
 
@@ -243,7 +243,7 @@ GET /clinic/optometry/item/v1/item
 ## 系统支持的所有检查项列表
 
 ```
-GET /clinic/optometry/item/v1/item/default
+GET /clinic/setting/v1/item/default
 ```
 > 请求参数
 
