--- a/诊所/数据/诊所.md
+++ b/诊所/数据/诊所.md
@@ -1,4 +1,4 @@
-# 门店
+# 诊所
 
 > 更新记录
 
@@ -31,21 +31,28 @@
         <td>-</td>
     </tr>
     <tr>
-        <td>contact</td>
-        <td>Contact</td>
+        <td>contactName</td>
+        <td>string</td>
         <td>-</td>
         <td>联系人</td>
+        <td>-</td>
+    </tr>
+    <tr>
+        <td>contactTel</td>
+        <td>string</td>
+        <td>-</td>
+        <td>联系电话</td>
         <td>-</td>
     </tr>
     <tr>
         <td>status</td>
         <td>Status</td>
         <td>-</td>
-        <td>状态</td>
+        <td>状态, ok("正常") disabled("禁用") expired("过期")</td>
         <td>-</td>
     </tr>
     <tr>
-        <td>appId</td>
+        <td>clientId</td>
         <td>string</td>
         <td>-</td>
         <td>连锁ID</td>
@@ -53,20 +60,15 @@
     </tr>
 </table>
 
-## 门店列表
+## 诊所列表
 
 ```
-GET /clinic/clinic/v1/clinic
+GET /clinic/data/v1/clinic
 ```
 
-## 查看门店
+## 查看诊所
 
 ```
-GET /clinic/clinic/v1/clinic/:id
+GET /clinic/data/v1/clinic/:id
 ```
 
-## 编辑
-
-```
-PATCH /clinic/clinic/v1/:id
-```
