--- a/诊所/预检/预检.md
+++ b/诊所/预检/预检.md
@@ -70,6 +70,28 @@ GET /clinic/precheck/v1/precheck
     </tr>
 </table>
 
+## 预检项列表
+
+```
+GET /clinic/precheck/v1/precheck/item
+```
+
+>请求参数
+<table>
+    <tr>
+        <th style="width:150px;">名称</th>
+        <th style="width:60px;">类型</th>
+        <th style="width:60px;">必填</th>
+        <th style="width:200px;">说明</th>
+    </tr>
+    <tr>
+        <td>clinicId</td>
+        <td>string</td>
+        <td>是</td>
+        <td>诊所ID</td>
+    </tr>
+</table>
+
 ## 预检-按日期查看
 
 ```
