--- a/诊所/预检/预检.md
+++ b/诊所/预检/预检.md
@@ -90,6 +90,34 @@ GET /clinic/precheck/v1/precheck/item
         <td>是</td>
         <td>诊所ID</td>
     </tr>
+    <tr>
+        <td>include</td>
+        <td>string</td>
+        <td>-</td>
+        <td>包含项目, 可选: detail, 返回子项目列表</td>
+    </tr>
+</table>
+
+## 预检项子项目列表
+
+```
+GET /clinic/precheck/v1/item/detail
+```
+
+>请求参数
+<table>
+    <tr>
+        <th style="width:150px;">名称</th>
+        <th style="width:60px;">类型</th>
+        <th style="width:60px;">必填</th>
+        <th style="width:200px;">说明</th>
+    </tr>
+    <tr>
+        <td>item</td>
+        <td>string</td>
+        <td>是</td>
+        <td>预检项列表, 逗号分隔</td>
+    </tr>
 </table>
 
 ## 预检-按日期查看
