--- a/诊所/检查/检查单项目.md
+++ b/诊所/检查/检查单项目.md
@@ -1,4 +1,4 @@
-# 检查项目
+# 检查单项目
 
 > 更新记录
 
@@ -23,95 +23,73 @@
         <th>备注</th>
     </tr>
     <tr>
-        <td>userName</td>
+        <td>clinicId</td>
         <td>string</td>
-        <td>创建员工姓名</td>
+        <td>诊所ID</td>
         <td>-</td>
     </tr>
     <tr>
-        <td>customerName</td>
+        <td>optometryId</td>
         <td>string</td>
-        <td>患者名</td>
+        <td>检查单ID</td>
+        <td>-</td>
+    </tr>
+    <tr>
+        <td>comboId</td>
+        <td>string</td>
+        <td>套餐ID</td>
         <td>-</td>
     </tr>
     <tr>
         <td>combo</td>
         <td>string</td>
-        <td>检查套餐</td>
+        <td>套餐名称</td>
         <td>-</td>
     </tr>
     <tr>
-        <td>data</td>
-        <td>OptometryData</td>
-        <td>调查表数据</td>
-        <td>见检查参数</td>
-    </tr>
-    <tr>
-        <td>symptom</td>
+        <td>category</td>
         <td>string</td>
-        <td>症状</td>
+        <td>检查项类别</td>
         <td>-</td>
     </tr>
     <tr>
-        <td>pic</td>
+        <td>name</td>
         <td>string</td>
-        <td>图片</td>
-        <td>多张图片用,分隔</td>
+        <td>套餐/检查项 名称</td>
+        <td>-</td>
     </tr>
     <tr>
-        <td>device</td>
-        <td>Device</td>
-        <td>设备</td>
-        <td>参见设备</td>
-    </tr>
-    <tr>
-        <td>checkUsername</td>
+        <td>userId</td>
         <td>string</td>
-        <td>检查员工</td>
+        <td>开单员工ID</td>
         <td>-</td>
     </tr>
     <tr>
-        <td>checkDateTime</td>
-        <td>DateTime</td>
-        <td>检查日期时间</td>
-        <td>-</td>
-    </tr>
-    <tr>
-        <td>diagnosis</td>
+        <td>userName</td>
         <td>string</td>
-        <td>诊断</td>
+        <td>开单员工名</td>
         <td>-</td>
     </tr>
     <tr>
-        <td>suggestion</td>
-        <td>string</td>
-        <td>建议</td>
+        <td>price</td>
+        <td>int</td>
+        <td>价格</td>
         <td>-</td>
-    </tr>
-    <tr>
-        <td>remark</td>
-        <td>string</td>
-        <td>备注</td>
-        <td>-</td>
-    </tr>
-    <tr>
-        <td>payStatus</td>
-        <td>Status</td>
-        <td>状态</td>
-        <td>waiting("待付款"), ok("已付款")</td>
     </tr>
     <tr>
         <td>status</td>
         <td>Status</td>
         <td>状态</td>
-        <td>waiting("开单中"), doing("检查中"), ok("完成")</td>
+        <td>doing("检查中"), ok("完成"), cancel("已取消")</td>
     </tr>
 </table>
 
-## 等检查列表(包含今日已完成列表)
+## 检查单检查项列表
+
+> 用于检查数据表单左侧检查项列表
 
 ```
-GET /clinic/optometry/v1/item/check
+GET /clinic/optometry/v1/optometry/item/check
 ```
 > 请求参数
 
@@ -122,37 +100,16 @@ GET /clinic/optometry/v1/item/check
         <th style="width:200px;">说明</th>
     </tr>
     <tr>
-        <td>customerId</td>
+        <td>optometryId</td>
         <td>是</td>
-        <td>患者ID</td>
+        <td>检查单ID</td>
     </tr>
 </table>
-
->返回值
-
-<table>
-    <tr>
-        <th style="width:150px;">属性名称</th>
-        <th style="width:60px;">类型</th>
-        <th style="width:200px;">说明</th>
-    </tr>
-    <tr>
-        <td>waitingList</td>
-        <td>array</td>
-        <td>待检查列表</td>
-    </tr>
-    <tr>
-        <td>todayList</td>
-        <td>array</td>
-        <td>今日已完成</td>
-    </tr>
-</table>
-
 
 ## 检查项列表
 
 ```
-GET /clinic/optometry/v1/item
+GET /clinic/optometry/v1/optometry/item
 ```
 > 请求参数
 
@@ -169,16 +126,10 @@ GET /clinic/optometry/v1/item
     </tr>
 </table>
 
-## 查看检查项
+## 添加项目到检查单
 
 ```
-GET /clinic/optometry/v1/item/:id
-```
-
-## 添加(按套餐)
-
-```
-POST /clinic/optometry/v1/item/create-by-combo
+POST /clinic/optometry/v1/optometry/item
 ```
 
 >请求参数
@@ -198,162 +149,19 @@ POST /clinic/optometry/v1/item/create-by-combo
     <tr>
         <td>combo</td>
         <td>string</td>
+        <td>-</td>
         <td>检查套餐名称</td>
+    </tr>
+    <tr>
+        <td>item</td>
+        <td>string</td>
         <td>-</td>
+        <td>检查项目名称, 和检查套餐二选一</td>
     </tr>
 </table>
 
-## 添加(按检查项)
+## 删除项目
 
 ```
-POST /clinic/optometry/v1/item/create-by-comboitem
-```
-
->请求参数
-<table>
-    <tr>
-        <th style="width:150px;">名称</th>
-        <th style="width:60px;">类型</th>
-        <th style="width:60px;">必填</th>
-        <th style="width:200px;">说明</th>
-    </tr>
-    <tr>
-        <td>optometryId</td>
-        <td>string</td>
-        <td>是</td>
-        <td>检查单ID</td>
-    </tr>
-    <tr>
-        <td>name</td>
-        <td>string</td>
-        <td>检查项名称</td>
-        <td>-</td>
-    </tr>
-</table>
-
-
-## 提交检查项数据
-
-```
-POST /clinic/optometry/v1/item/data
-```
-
->请求参数
-<table>
-    <tr>
-        <th style="width:150px;">名称</th>
-        <th style="width:60px;">类型</th>
-        <th style="width:60px;">必填</th>
-        <th style="width:200px;">说明</th>
-    </tr>
-    <tr>
-        <td>id</td>
-        <td>检查项ID</td>
-        <td>是</td>
-        <td>-</td>
-    </tr>
-    <tr>
-        <td>data</td>
-        <td>检查项数据</td>
-        <td>是</td>
-        <td>检查数据，见检查参数</td>
-    </tr>
-    <tr>
-        <td>deviceId</td>
-        <td>检查设备ID</td>
-        <td>-</td>
-        <td>-</td>
-    </tr>
-    <tr>
-        <td>symptom</td>
-        <td>string</td>
-        <td>症状</td>
-        <td>-</td>
-    </tr>
-    <tr>
-        <td>pic</td>
-        <td>string</td>
-        <td>图片</td>
-        <td>多张图片用,分隔</td>
-    </tr>
-    <tr>
-        <td>diagnosis</td>
-        <td>string</td>
-        <td>诊断</td>
-        <td>-</td>
-    </tr>
-    <tr>
-        <td>suggestion</td>
-        <td>string</td>
-        <td>建议</td>
-        <td>-</td>
-    </tr>
-    <tr>
-        <td>remark</td>
-        <td>string</td>
-        <td>备注</td>
-        <td>-</td>
-    </tr>
-</table>
-
-## 删除(按套餐)
-
-```
-DELETE /clinic/optometry/v1/item/delete-by-combo
-```
-
->请求参数
-<table>
-    <tr>
-        <th style="width:150px;">名称</th>
-        <th style="width:60px;">类型</th>
-        <th style="width:60px;">必填</th>
-        <th style="width:200px;">说明</th>
-    </tr>
-    <tr>
-        <td>optometryId</td>
-        <td>string</td>
-        <td>是</td>
-        <td>检查单ID</td>
-    </tr>
-    <tr>
-        <td>combo</td>
-        <td>string</td>
-        <td>检查套餐名称</td>
-        <td>-</td>
-    </tr>
-</table>
-
-## 删除(按检查项)
-
-```
-DELETE /clinic/optometry/v1/item/delete-by-comboitem
-```
-
->请求参数
-<table>
-    <tr>
-        <th style="width:150px;">名称</th>
-        <th style="width:60px;">类型</th>
-        <th style="width:60px;">必填</th>
-        <th style="width:200px;">说明</th>
-    </tr>
-    <tr>
-        <td>optometryId</td>
-        <td>string</td>
-        <td>是</td>
-        <td>检查单ID</td>
-    </tr>
-    <tr>
-        <td>name</td>
-        <td>string</td>
-        <td>检查项名称</td>
-        <td>-</td>
-    </tr>
-</table>
-
-## 删除
-
-```
-DELETE /clinic/optometry/v1/item/:id
+DELETE /clinic/optometry/v1/optometry/item/:id
 ```
