--- a/诊所/设置/检查项目.md
+++ b/诊所/设置/检查项目.md
@@ -26,7 +26,7 @@
         <td>category</td>
         <td>string</td>
         <td>类型</td>
-        <td>normal: 常规检查项 ok: 角膜塑形镜</td>
+        <td>normal: 常规检查项 special: 特检</td>
     </tr>
     <tr>
         <td>name</td>
