--- a/诊所/检查/检查单.md
+++ b/诊所/检查/检查单.md
@@ -12,9 +12,15 @@
     <tr>
         <td>clinicId</td>
         <td>string</td>
-        <td>门店ID</td>
+        <td>诊所ID</td>
         <td>-</td>
-    </tr>    
+    </tr>
+    <tr>
+        <td>clinicName</td>
+        <td>string</td>
+        <td>诊所名称</td>
+        <td>-</td>
+    </tr>  
     <tr>
         <td>totalAmount</td>
         <td>int</td>
@@ -25,7 +31,7 @@
         <td>payStatus</td>
         <td>Status</td>
         <td>状态</td>
-        <td>waiting("待付款"), ok("已付款")</td>
+        <td>waiting("待付款"), doing("检查中"), ok("已付款")</td>
     </tr>
     <tr>
         <td>status</td>
@@ -54,13 +60,13 @@ POST /clinic/optometry/v1/optometry
         <td>clinicId</td>
         <td>string</td>
         <td>是</td>
-        <td>门店ID</td>
+        <td>诊所ID</td>
     </tr>
     <tr>
-        <td>customerId</td>
+        <td>patientId</td>
         <td>string</td>
-        <td>患者ID</td>
         <td>-</td>
+        <td>患者ID</td>
     </tr>
 </table>
 
@@ -69,6 +75,28 @@ POST /clinic/optometry/v1/optometry
 ```
 GET /clinic/optometry/v1/optometry
 ```
+
+>请求参数
+<table>
+    <tr>
+        <th style="width:150px;">名称</th>
+        <th style="width:60px;">类型</th>
+        <th style="width:60px;">必填</th>
+        <th style="width:200px;">说明</th>
+    </tr>
+    <tr>
+        <td>clinicId</td>
+        <td>string</td>
+        <td>是</td>
+        <td>诊所ID</td>
+    </tr>
+    <tr>
+        <td>patientId</td>
+        <td>string</td>
+        <td>-</td>
+        <td>患者ID</td>
+    </tr>
+</table>
 
 ## 查看
 
