--- a/诊所/检查/检查项目.md
+++ b/诊所/检查/检查项目.md
@@ -1,4 +1,4 @@
-# 检查套餐
+# 检查项目
 
 > 更新记录
 
@@ -23,21 +23,21 @@
         <th>备注</th>
     </tr>
     <tr>
+        <td>category</td>
+        <td>string</td>
+        <td>类型</td>
+        <td>normal: 常规检查项 special: 特检</td>
+    </tr>
+    <tr>
         <td>name</td>
         <td>string</td>
         <td>名称</td>
         <td>-</td>
     </tr>
     <tr>
-        <td>item</td>
+        <td>description</td>
         <td>string</td>
-        <td>检查项</td>
-        <td>-</td>
-    </tr>
-    <tr>
-        <td>itemList</td>
-        <td>list</td>
-        <td>检查项列表</td>
+        <td>描述</td>
         <td>-</td>
     </tr>
     <tr>
@@ -47,9 +47,27 @@
         <td>-</td>
     </tr>
     <tr>
-        <td>description</td>
-        <td>string</td>
-        <td>检查套餐描述</td>
+        <td>doubleEye</td>
+        <td>bool</td>
+        <td>是否双眼检查</td>
+        <td>-</td>
+    </tr>
+    <tr>
+        <td>fileModule</td>
+        <td>bool</td>
+        <td>是否需要检查附件上传</td>
+        <td>-</td>
+    </tr>
+    <tr>
+        <td>resultModule</td>
+        <td>bool</td>
+        <td>是否需要检查结果录入</td>
+        <td>-</td>
+    </tr>
+    <tr>
+        <td>remarkModule</td>
+        <td>bool</td>
+        <td>是否需要备注</td>
         <td>-</td>
     </tr>
     <tr>
@@ -60,28 +78,30 @@
     </tr>
 </table>
 
-## 检查套餐列表
+## 检查项列表
 
 ```
-GET /clinic/optometry/v1/combo
+GET /clinic/optometry/v1/item
 ```
 > 请求参数
 
 <table>
     <tr>
         <th style="width:150px;">属性名称</th>
+        <th style="width:60px;">类型</th>
         <th style="width:60px;">必填</th>
         <th style="width:200px;">说明</th>
     </tr>
     <tr>
         <td>clinicId</td>
+        <td>string</td>
+        <td>是</td>
+        <td>诊所ID</td>
+    </tr>
+    <tr>
+        <td>include</td>
+        <td>string</td>
         <td>-</td>
-        <td>门店ID</td>
+        <td>包含项目, 可选: detail, 返回子项目列表</td>
     </tr>
 </table>
-
-## 查看检查套餐
-
-```
-GET /clinic/optometry/v1/combo/:id
-```
