--- a/诊所/检查/设备信息.md
+++ b/诊所/检查/设备信息.md
@@ -38,10 +38,24 @@
         <td>-</td>
     </tr>
     <tr>
-        <td>type</td>
+        <td>gatewayId</td>
+        <td>string</td>
+        <td>-</td>
+        <td>采集网关ID</td>
+        <td>-</td>
+    </tr>
+    <tr>
+        <td>category</td>
         <td>string</td>
         <td>-</td>
         <td>类型</td>
+        <td>-</td>
+    </tr>
+    <tr>
+        <td>connType</td>
+        <td>string</td>
+        <td>-</td>
+        <td>连接类型</td>
         <td>-</td>
     </tr>
     <tr>
@@ -59,73 +73,10 @@
         <td>-</td>
     </tr>
     <tr>
-        <td>connectType</td>
-        <td>string</td>
-        <td>-</td>
-        <td>连接方式</td>
-        <td>-</td>
-    </tr>
-    <tr>
-        <td>bleName</td>
-        <td>string</td>
-        <td>-</td>
-        <td>蓝牙名称</td>
-        <td>-</td>
-    </tr>
-    <tr>
-        <td>bleMac</td>
-        <td>string</td>
-        <td>-</td>
-        <td>蓝牙MAC</td>
-        <td>-</td>
-    </tr>
-    <tr>
-        <td>bleService</td>
-        <td>string</td>
-        <td>-</td>
-        <td>蓝牙服务</td>
-        <td>-</td>
-    </tr>
-    <tr>
-        <td>bleNotify</td>
-        <td>string</td>
-        <td>-</td>
-        <td>蓝牙通知特征</td>
-        <td>-</td>
-    </tr>
-    <tr>
-        <td>bleWrite</td>
-        <td>string</td>
-        <td>-</td>
-        <td>蓝牙写特征</td>
-        <td>-</td>
-    </tr>
-    <tr>
-        <td>bleMtu</td>
-        <td>int</td>
-        <td>-</td>
-        <td>蓝牙MTU</td>
-        <td>-</td>
-    </tr>
-    <tr>
-        <td>transportGzip</td>
-        <td>bool</td>
-        <td>-</td>
-        <td>是否gzip传输</td>
-        <td>-</td>
-    </tr>
-    <tr>
         <td>status</td>
         <td>Status</td>
         <td>-</td>
         <td>状态</td>
-        <td>-</td>
-    </tr>
-    <tr>
-        <td>appId</td>
-        <td>string</td>
-        <td>-</td>
-        <td>连锁ID</td>
         <td>-</td>
     </tr>
 </table>
@@ -133,5 +84,11 @@
 ## 设备列表
 
 ```
-GET /clinic/device/v1/device?clinicId=:clinicId
+GET /clinic/optometry/v1/device?clinicId=:clinicId
+```
+
+## 查看设备
+
+```
+GET /clinic/optometry/v1/device/:id
 ```
