--- a/诊所/检查/检查单.md
+++ b/诊所/检查/检查单.md
@@ -68,6 +68,12 @@ POST /clinic/optometry/v1/optometry
         <td>-</td>
         <td>患者ID</td>
     </tr>
+    <tr>
+        <td>followUpId</td>
+        <td>string</td>
+        <td>-</td>
+        <td>原检查单ID, 复诊时提供</td>
+    </tr>
 </table>
 
 ## 列表
