--- a/诊所/检查/设备信息.md
+++ b/诊所/检查/设备信息.md
@@ -92,3 +92,22 @@ GET /clinic/optometry/v1/device?clinicId=:clinicId
 ```
 GET /clinic/optometry/v1/device/:id
 ```
+
+
+## 检查室列表
+
+```
+GET /clinic/optometry/v1/device/room?clinicId=:clinicId
+```
+
+## 设备信息默认列表
+
+```
+GET /clinic/setting/v1/device/info/default
+```
+
+## 设备连接类型列表
+
+```
+GET /clinic/optometry/v1/device/conn-type
+```
